--- a/CSS/常用的覆盖效果.md
+++ b/CSS/常用的覆盖效果.md
@@ -3,7 +3,8 @@
 > 覆盖这个名字是我自己取的只需简单的几步就可实现<br>
 
 #### 先看一下效果<br>
-
+<img src="https://github.com/wangxinyu123/SKill/blob/master/CSS/img/%E8%A6%86%E7%9B%96%E5%89%8D.png" width="400"><br>
+<img src="https://github.com/wangxinyu123/SKill/blob/master/CSS/img/%E8%A6%86%E7%9B%96%E5%90%8E.png" width="400"><br>
 
 * 父级元素设置   
 
