--- a/CSS/动画实例.md
+++ b/CSS/动画实例.md
@@ -4,7 +4,7 @@
 
 * translate() 这个方法用于2D 有以下三种
 
-```css
+```html
   translateX() translateY() translateZ()
 
   translate(x,y)
@@ -12,7 +12,7 @@
 
 * rotate() 旋转元素
 
-```css
+```html
 /*
   顺时针旋转30度
 */
@@ -20,7 +20,7 @@
 ```
 * scale() 用于放大元素大小的倍数
 
-```css
+```html
 /*
   该属性可以配合伪类 :hover使用
 */
