--- a/CSS/动画实例.md
+++ b/CSS/动画实例.md
@@ -40,6 +40,59 @@ scale(2,3)
 > 定义 3D 转换: translateZ(z)
 > 定义 3D 旋转:rotate3d(x,y,z,angle)
 
+### 实例<br>
+
+```html
+@keyframes rotate{
+        from{
+            transform: rotateX(0deg) rotateY(0deg);
+          }
+        to{
+            transform: rotateX(-360deg) rotateY(-360deg);
+          }
+        }   
+         
+        .Box {
+            width: 200px;
+            height: 200px;
+            position: relative;
+            margin: 200px auto;
+            animation:rotate 15s infinite linear;
+            transform: rotate3d(-1, -1, 0, 45deg);
+            /*3D效果的移动*/
+            transform-style: preserve-3d;
+            /*定义 3D 转换元素的透视视图。*/    
+          }
+          
+        .Box>div {
+            /*可让所有div重叠*/
+            width: 200px;
+            height: 200px;
+            position: absolute;
+            opacity: .5;
+        }
+
+        .front {
+            background-color: bisque;
+            transform: translateZ(100px);
+        }
+
+        .back {
+            background-color: chocolate;
+            transform: translateZ(-100px) rotateY(180deg);
+        }
+
+    <div class="Box">
+        <div class="front">front</div>
+        <div class="back">back</div>
+        <div class="left">left</div>
+        <div class="right">right</div>
+        <div class="top">top</div>
+        <div class="bottom">bottom</div>
+    </div>
+
+```
+
   
 
 
