--- a/2020 秋招总结/2020 秋招知识点总结 -- ( Vue篇 ).md
+++ b/2020 秋招总结/2020 秋招知识点总结 -- ( Vue篇 ).md
@@ -18,9 +18,9 @@
 
 > Vue 完整的生命周期，就是从开始创建、初始化数据、编译模版、挂载Dom -> 渲染、更新 -> 渲染、卸载等一系列过程。[参考地址](https://cn.vuejs.org/v2/guide/instance.html#%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E5%9B%BE%E7%A4%BA)
 
-      * beforeCreate：生命周期函数执行时，data 和 methods中的数据还没有初始化
-      * created：data 和 methods都已经初始化好了。最早调用methods和操作data的数据，但真实的dom还没有生成    
-      * mounted：只要执行完mounted，表示整个Vue实例已经初始化完毕了  
+  * beforeCreate：生命周期函数执行时，data 和 methods中的数据还没有初始化
+  * created：data 和 methods都已经初始化好了。最早调用methods和操作data的数据，但真实的dom还没有生成    
+  * mounted：只要执行完mounted，表示整个Vue实例已经初始化完毕了  
 
 ### 3. Vue组件之间的参数传递方式
 
@@ -39,17 +39,18 @@
 
 > beforeEach的应用场景：需要用户登录才能进入主页面
 
-      * 主要包括三个参数  to，from，next 
-      * <span style="color:#e67e22">to</span>：即将进入的路由
-      * <span style="color:#e67e22">from</span>：当前要离开的页面
-      * <span style="color:#e67e22">next</span>：一定调用这个方法，否则路由不会进行跳转
+  * 主要包括三个参数  to，from，next 
+  * <span style="color:#e67e22">to</span>：即将进入的路由
+  * <span style="color:#e67e22">from</span>：当前要离开的页面
+  * <span style="color:#e67e22">next</span>：一定调用这个方法，否则路由不会进行跳转
 
 ### 5. Vuex是什么？怎么用？
 
-    * vuex相当与一个仓库，里面存储了数据，方法
-    * state：存放数据，但是不可以直接修改数据
-    * mutations：可以通过定义的方法修改state中的数据内容
-    * actions：可以理解为通过将 mutations 里面处里数据的方法变成可异步的处理数据的方法，简单的说就是异步操作数据 [参考官网](https://vuex.vuejs.org/zh/guide/actions.html)
+  * vuex相当与一个仓库，里面存储了数据，方法
+  * state：存放数据，但是不可以直接修改数据
+  * mutations：可以通过定义的方法修改state中的数据内容
+  * actions：可以理解为通过将 mutations 里面处里数据的方法变成可异步的处理数据的方法，简单的说就是异步操作数据  
+  [参考官网](https://vuex.vuejs.org/zh/guide/actions.html)
 
 ```js
 //state 使用
@@ -90,7 +91,7 @@
 * $route 是 '路由的信息' 包括  `path`，`params`，`hash`，`query`，`fullPath`，`matched`，`name`等路由信息参数。
 * $router 是 '路由实例' 包括 `路由的跳转：`this.#router.push({name:item.name})
 
-### 8.  <Keep-alive></Keep-alive>的作用？
+### 8. Keep-alive的作用？
 
 > keep-alive可以实现组件缓存，当组件切换时不会进行卸载
 
@@ -101,15 +102,15 @@
 
 > Vue的实现响应式__并不是数据发生变化之后DOM立即变化__,  Vue是异步执行DOM更新的. [参考官网](https://cn.vuejs.org/v2/guide/reactivity.html#%E5%BC%82%E6%AD%A5%E6%9B%B4%E6%96%B0%E9%98%9F%E5%88%97)
 
-      ```js
-methods:{
-   change(){
-     this.$nextTick(()=>{
-         // 操作Dom
-    })
+ ```js
+   methods:{
+     change(){
+       this.$nextTick(()=>{
+          // 操作Dom
+       })
+    }
   }
-}
-      ```
+ ```
 
 ### 10. Vue 组件 data 为什么必须是函数
 
@@ -140,17 +141,17 @@ methods:{
 
      > 这样使用watch时有一个特点，就是当值第一次绑定的时候，不会执行监听函数，只有值发生改变才会执行。如果我们需要在最初绑定值的时候也执行函数，则就需要用到immediate属性。
 
-       ```js
- watch: {
+ ```js
+  watch: {
     cityName: {
     　　handler(newName, oldName) {
       　　// ...
     　　},
         // 值为 true 立即执行handler方法 反之和正常的使用watch一样
     　　immediate: true
-    }
+      }
     } 
-       ```
+ ```
 
    * deep
 
